--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,17 @@
   height: 500px;
 }
 
-.avg {
-	color: green;
+.year {
+	width: 30px;
+	float: left;
+}
+
+
+.bar {
+	float: left;
+	height: 16px;
+	background-color: brown;
+	margin-top: 2px;
+	margin-left: 8px;
+	margin-right: 8px;
 }
